# tap30-challenge-mlops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  notebook.ipynb  pyproject.toml
.github/workflows/: docker-publish.yaml
artifacts/processed/: test.csv  train.csv  val.csv  validation.csv
artifacts/raw/: test.csv  train.csv  validation.csv
config/: config.yaml
manifests/: deployment.yaml  service.yaml
pipeline/: run.py
src/: config_reader.py  data_ingestion.py  data_processing.py  logger.py  main.py  model_training.py
web/: application.py
