[project]
name = "tap30-challenge-mlops"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
]


[tool.black]
line-length = 88
include = '\.pyi?|\.ipynb$'

[tool.isort]
profile = 'black'

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
