[project]
name = "tap30-challenge-mlops"
version = "0.1.0"
authors = [
    { name = "Pouria Sarmasti", email = "pouria98sarmasti@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.0",
    "pandas>=2.3.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]


[tool.black]
line-length = 88
include = '\.pyi?|\.ipynb$'

[tool.isort]
profile = 'black'

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
